<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/userNameEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.654" />

    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="20dp"
        android:textColorHint="@color/black"
        app:backgroundTint="@color/black"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.217"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="20dp"
        android:textColorHint="@color/black"
        app:backgroundTint="@color/black"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameEditText"
        app:layout_constraintVertical_bias="0.09"
        tools:layout_editor_absoluteX="30dp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:onClick="login"
        android:text="Várj egy kicsit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        app:layout_constraintVertical_bias="0.144"
        android:backgroundTint="@color/button_color"
        android:textColor="@color/white"
        tools:ignore="MissingConstraints,UsingOnClickInXml" />

    <Button
        android:id="@+id/registButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_color"
        android:onClick="registration"
        android:text="@string/registration"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintVertical_bias="0.045"
        tools:ignore="MissingConstraints,UsingOnClickInXml" />

    <Button
        android:id="@+id/guestLoginButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_color"
        android:onClick="loginAsGuest"
        android:text="@string/guest"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registButton"
        app:layout_constraintVertical_bias="0.035"
        tools:ignore="MissingConstraints,UsingOnClickInXml" />

    <Button
        android:id="@+id/googleLoginButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_color"
        android:onClick="googleLogin"
        android:text="@string/googleLogin"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guestLoginButton"
        app:layout_constraintVertical_bias="0.04"
        tools:ignore="MissingConstraints,UsingOnClickInXml" />

</androidx.constraintlayout.widget.ConstraintLayout>