<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardBackgroundColor="@color/backgroundColor">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true" />

        <TextView
            android:id="@+id/itemTitle"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemImage"
            android:padding="8dp"
            android:text="@string/item_placeholder"
            android:textColor="@color/black"/>

        <RatingBar
            android:id="@+id/ratingBar"
            style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemTitle"
            android:layout_marginStart="8dp"
            android:numStars="5"
            android:isIndicator="true"
            android:theme="@style/RatingBar"/>

        <TextView
            android:id="@+id/subTitle"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ratingBar"
            android:padding="8dp"
            android:text="@string/item_info_placeholder"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/price"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/subTitle"
            android:layout_marginBottom="12dp"
            android:padding="8dp"
            android:textColor="@color/red"
            android:layout_centerHorizontal="true"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/price"
            android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/add_to_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/into_cart"
            android:backgroundTint="@color/button_color"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:layout_margin="20dp"
            android:backgroundTint="@color/button_color"
            android:textColor="@color/white"/>

        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>